--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
     <br>
     
     <h2 id="title-images">Images</h2>
-    <img class="coffee" src="images/coffee.jpg" alt="A coffee mug on a table" title="Cofee Mug"/>
+    <img class="coffee" src="./images/coffee.jpg" alt="A coffee mug on a table" title="Cofee Mug"/>
 
     <h2 id="title=videos">Videos</h2>
-    <video src="videos/ocean.mp4" controls autoplay loop>Your browser doesn't support videos.</video>
+    <video src="./videos/ocean.mp4" controls autoplay loop>Your browser doesn't support videos.</video>
 
     <h2 id="title-audio">Audio</h2>
     <p>Fish Leong - Courage</p>
-    <audio src="audio/Fish Leong - Courage.flac" controls title="梁静茹 - 勇气">Courage - Fish Leong</audio>
+    <audio src="./audio/Fish Leong - Courage.flac" controls title="梁静茹 - 勇气">Courage - Fish Leong</audio>
     <br>
     <iframe  width="560" height="315" src="https://www.youtube.com/embed/wczwwKckbEo?rel=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   
